# Connect4

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  GameController.h  GameView.h  Globals.h  MctsAiPlayer.h  MiniMaxAiPlayer.h  Player.h
src/: Board.cpp  CMakeLists.txt  Connect4.cpp  GameController.cpp  GameView.cpp  Globals.cpp  MctsAiPlayer.cpp  MiniMaxAiPlayer.cpp
